# software-101

./: .gitignore  CNAME  CONTRIBUTING.md  Makefile  README.md  TODO  export.sh  init_venv.sh  jupyternb2markdown.sh  make_pages.sh  pyproject.toml  requirements.txt  run_tests.py  run_tests.sh
.github/workflows/: deploy.yml  python-package.yml
bottle/: README.md  bottle.ipynb  bottledemo.odg  bottledemo.py  requirements.txt
datenbank/: README.md  datenbank.db  datenbank.ipynb  dbdemo.py  requirements.txt
decorator/: README.md  decorator.ipynb
dotenv/: .env  README.md  dotenv.ipynb
flask/: README.html  README.md  flask.ipynb  flask.md  flask_final.html  flask_final.ipynb  process_notebook.sh
guizero/: README.md  guizero.ipynb
guizero/latex/: guizero.tex
matplotlib/: README.md  matplotlib.ipynb
mqtt/: README.md  mqtt.ipynb  publisher.py  subscriber.py
netzwerk/: README.md  netzwerk.ipynb
persistenz/: README.md  persistenz.ipynb
pygame/: README.md  README.rst  pygamedemo.py
pygame-zero/: PygameZeroDemo.odg  README.md  pgzero_demo.ipynb  pygamezerodemo.py
pyqt/: README.md  mainwindow.ui  pyqt.ipynb  requirements.txt
pysimplegui/: PySimpleGui.ipynb  README.md
python/: README.md  cscircles.ipynb
python_intro/: README.md  cscircles.ipynb
testing/: README.md  unittest.ipynb
testing/htmlcov/: index.html  person_py.html  status.json
tkinter/: README.md  tkintedemo.ipynb  tkinterdemo.ipynb  tkinterdemo.py
typen/: README.md  typen.ipynb
unittest/: README.md  unittest.ipynb
