[tool.poetry]
name = "software-101"
version = "0.1.0"
description = ""
authors = ["Marco Bakera <marco@bakera.de>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter-contrib-nbextensions = "^0.7.0"
bottle = "^0.12.19"
mysql-connector-python = "^8.0.28"
guizero = "^1.3.0"
matplotlib = "^3.5.1"
pygame = "^2.5.2"
pgzero = "^1.2.1"
PyQt5 = "^5.15.6"
pyqtdeploy = "^3.2.0"
fbs = "^1.1.2"
pytest = "^7.1.1"
mypy = "^0.942"
tinydb = "^4.7.0"
python-dotenv = "^0.21.0"
mariadb = "^1.1.4"
notebook = "^7.0.6"
paho-mqtt = "^2.1.0"
jupyter = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
